# SO1_1S2024_201325641

./: README.md
HT/ht_1/: README.md  app.go  go.mod  main.go  wails.json
HT/ht_1/Modulo_Ram/: ram.c
HT/ht_1/frontend/: index.html  package-lock.json
Proyecto1/: README.md  docker-compose.yml
Proyecto1/Backend/: .gitignore  Dockerfile  go.mod  go.sum  main.go
Proyecto1/DB/: script.sql
Proyecto1/Modulos/CPU/: .cpu.ko.cmd  .cpu.mod.cmd  .cpu.mod.o.cmd  .cpu.o.cmd  cpu.c  cpu.ko  cpu.mod  cpu.mod.c  modules.order
Proyecto1/Modulos/RAM/: ram.c
Proyecto1/frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
Proyecto1/frontend/src/: App.css  App.jsx  index.css
Proyecto2/: .README.md
Proyecto2/Cloud-Run/api/: Dockerfile  index.js  package-lock.json  package.json
Proyecto2/Cloud-Run/webapp-p2so1/: Dockerfile  README.md  index.html  package-lock.json  package.json
Proyecto2/GRPC/client/: Dockerfile  client.go  go.mod
Proyecto2/GRPC/server/: Dockerfile  go.mod  go.sum  server.go
Proyecto2/Rust/rust-client/: Dockerfile
Proyecto2/Rust/rust-server/: Cargo.toml  Dockerfile
Proyecto2/Rust/rust-server/src/: main.rs
Proyecto2/consumer/: go.mod  go.sum  main.go
Proyecto2/k8s/config-maps/: grafana-config-map.yaml  mongo-config-map.yaml  redis-config-map.yaml
Proyecto2/k8s/deployments/: consumer-deploy.yaml  grpcRoute.yaml  (+6 more)
Proyecto2/locust/: .gitignore  data-fin.json  data.json  traffic.py
Proyecto2/producer/: Dockerfile  go.mod  main.go
Tareas/Tarea_1/: README.md
Tareas/Tarea_3/: README.md
Tareas/Tarea_4/: .gitignore  README.md
(+46 files in other folders)
