[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["secrets", "tls", "json"] }
rocket_cors = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
serde_derive = "1.0"
tokio = { version = "1.17.0", features = ["full"] }
reqwest = { version = "0.12.3", features = ["json"] }
rdkafka = "0.27.0"